sand-macros/tests/cases/fail_recipe_raw_string_typed_path.rs
use sand_core::Ingredient;

fn main() {
    let _ = Ingredient::item_id("minecraft:diamond");
}
